--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        	var standardWeight = (height - 100) * 0.9;
        	var dietWeight = weight - standardWeight;
        	var fatRate = (weight / standardWeight)*10;
-       	var Text = "당신의 현재 몸무게는 " + weight + "kg이고, 표준 체중은 " + standardWeight + "kg입니다. 따라서 당신은 " + dietWeight + "kg를 감량해야합니다." + "현재 비만도는" + fatRate + "%입니다.";
+       	var Text = "당신의 현재 몸무게는 " + weight + "kg이고, 표준 체중은 " + standardWeight + "kg입니다." + <br>"따라서 당신은 " + dietWeight + "kg를 감량해야합니다." <br>+ "현재 비만도는" + fatRate + "%입니다.";
       	 display.innerHTML = Text;
        }
 	</script>
